--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>basic</artifactId>
 
-
+    <dependencies>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework</groupId>-->
+        <!--            <artifactId>spring-context</artifactId>-->
+        <!--            <version>5.3.9</version>-->
+        <!--        </dependency>-->
+    </dependencies>
 </project>
