--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -17,5 +17,10 @@
         <!--            <artifactId>spring-context</artifactId>-->
         <!--            <version>5.3.9</version>-->
         <!--        </dependency>-->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 </project>
